# ChangeLog for app-emacs/emacs-common-gentoo
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*emacs-common-gentoo-1.3-r2 (06 Jun 2012)

  06 Jun 2012; Ulrich Müller <ulm@gentoo.org>
  +emacs-common-gentoo-1.3-r2.ebuild, metadata.xml:
  Copy from Portage tree. Move handling of game score files from emacs ebuilds
  to here. Create games user if necessary, bug 368647.

  29 Jan 2012; Ulrich Müller <ulm@gentoo.org> -emacs-common-gentoo-1.3.ebuild,
  emacs-common-gentoo-9999.ebuild:
  Sync from Portage tree.

  28 Jan 2012; Ulrich Müller <ulm@gentoo.org> +emacs-common-gentoo-1.3.ebuild,
  emacs-common-gentoo-9999.ebuild:
  Remove old site-start.el file if it hasn't been modified by the user.

  15 Dec 2011; Ulrich Mueller <ulm@gentoo.org> emacs-common-gentoo-9999.ebuild:
  Sync from Portage tree.

  13 Dec 2011; Ulrich Mueller <ulm@gentoo.org> -emacs-common-gentoo-1.3.ebuild,
  emacs-common-gentoo-9999.ebuild:
  Moved to Portage tree. Update wording of elog message.

  06 Dec 2011; Ulrich Mueller <ulm@gentoo.org> emacs-common-gentoo-1.3.ebuild,
  emacs-common-gentoo-9999.ebuild:
  Get rid of all echo commands because they aren't logged.

*emacs-common-gentoo-1.3 (06 Dec 2011)

  06 Dec 2011; Ulrich Mueller <ulm@gentoo.org> +emacs-common-gentoo-1.3.ebuild:
  Version bump. The Emacs site-start.el file has moved to /etc/emacs/.

  31 Jan 2011; Ulrich Mueller <ulm@gentoo.org>
  -emacs-common-gentoo-1.2-r2.ebuild, emacs-common-gentoo-9999.ebuild:
  Moved to portage tree. Sync live ebuild.

  02 Jan 2011; Ulrich Mueller <ulm@gentoo.org>
  emacs-common-gentoo-1.2-r2.ebuild:
  Copied from -r1 in portage tree. Update for EAPI 4.

  01 Dec 2009; Ulrich Mueller <ulm@gentoo.org>
  emacs-common-gentoo-9999.ebuild:
  Regenerate site-gentoo file in pkg_config, too.

  08 Aug 2009; Ulrich Mueller <ulm@gentoo.org>
  emacs-common-gentoo-9999.ebuild, metadata.xml:
  Emacs 23 style icons are default now.
