@@ -3,23 +3,23 @@ Hash: SHA1
 
 DIST emacs-common-gentoo-1.3.tar.gz 46819 RMD160 40c12dd355c3fd80ad65d45190c4f3c7f2134ad6 SHA1 ff743a4646d493dd14ed1e812d3adfd6323498e9 SHA256 c874088b1d9833432e1da9c3e3f79e7891cb3af41bcdecb02aa299d207c0218d
 EBUILD emacs-common-gentoo-1.3-r2.ebuild 3919 RMD160 6779ee677c722b972b8a1f48ae7d85c50157b38f SHA1 601e7077c3f047737bca8a862e4d016227798666 SHA256 bb3bd03408266632011402f3ff381e64f5bc2002f299f85f446a9d94c955c4ba
-EBUILD emacs-common-gentoo-9999.ebuild 3687 RMD160 79db03774ef827d5d578edeaab82762a8661cdf7 SHA1 14ca71c84d84fad5081284e3ae2617c97ee9bbdb SHA256 52690855f6b71eea687cc28f7639921eeeb3194c569c373b8b4a4eaf813a54f8
-MISC ChangeLog 3006 RMD160 4fde95d790bead726387c039f0fd5d8dc5d1bd4a SHA1 08ce893e01f0e7cf8fc0de2a60d32bec77238066 SHA256 c5295c532f8a8f456a8f2f986f2d56dba2c530fae2c679f844a59fad23680424
-MISC metadata.xml 300 RMD160 0984816d85d7e7e6edb507007e8a1e58e52b2c96 SHA1 818d544d6e28d7d4b7c6a8e1e27c20bba6e7f4dc SHA256 3db1ca77aa19677da4be7526f7667fa5d2fbd9aba96b6a0d590f9c3084bda3a8
+EBUILD emacs-common-gentoo-9999.ebuild 4036 RMD160 12040616aee413aa986b8fc797f365ed9422e66b SHA1 e388f9877b48c32e9a98d95f5864807e632fb67a SHA256 26f4f02c6f27f6b53dcfaa39dfee760f48f75138fe22f9e6454a26fa4eb157c4
+MISC ChangeLog 3170 RMD160 b737fca5c91948d99ead91a80d7efa45fa15d615 SHA1 5efa8112bdcc1019d60d516ce3468d2f7c714fe1 SHA256 1eb69c33e24625ef69325af9f49cc3b4b3f6f57f3bb4547a953415c89425b785
+MISC metadata.xml 236 RMD160 d561b8dfd95bc25737605fbe10b454e9a1cb89c5 SHA1 f0a6ab2d2514a8b9699f7c1260ff99b72b5df0e3 SHA256 f0b6df93ac83810a22d1519f0b37ee94996d1512c4fe4407df6fbb27f4da6608
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBAgAGBQJP0JvoAAoJEDxpGckxwJCBXOcQAI66alzXX+2cZ2+X4F3DAvKs
-ZQZVp08t5AoE78zsiLD+4NagbHml+r3lgb6uOX67muDDGM8CtzPZSMEL53Wun/bG
-eDHcv0ZQsalPQ6WeB974/fuKFNsBHgT4DS/aYgWR1oLPoneTOyGTlcn2lUHiekH3
-HO3vtSQE6HVJRVx7uVlv8UUubRiZIy7sCDilcBOIz8nokhOv8+oeew4OHgwTiYFH
-6p76ndasFP3WJNm5ue444af+Dzrpr5dycW4K/bXFSdNG7N0cJyA35oCebnoDrZOq
-mc3jVBEs6WfKfxBAOoBw+E78Vg4k5MRhZW9WE7tsAaldGz1MkpBCSRdaY9ClMrFv
-a0BYQBBoRgVt24NICmVERz795455/kfBZgR7JOkkjUlIn+s1FwiYtUWpZSCmeVDf
-0dsl5/GLOF8DJ+8EyyfJbXtWj5htAugcToRRsWqcXikC5REH13+RhLLoyHgV+zp2
-FUYH6SrARb47UR7H2JTQ3yy4gOxMDs3pobj6pK5K/5LAQv7S8zU3iQsA0JvTxdt2
-URlM1SEvkoUkN8++lNVqf9745fmPgbo9G7o9KUugHNCTXHY3+aYiqk27msTKheW9
-n5Xx1GVNcSe8fJ5wLqLia2MP1WMJ/YbaLgQDLi+XnXiqTv0oXYzEJqn/FatpoW78
-IYrrkuFy6ryqpA3PZJpy
-=kSYB
+iQIcBAEBAgAGBQJP00kOAAoJEDxpGckxwJCB63MQAI/vDgF7+Zkb+e1UrdaOPlok
+3MUsMIEzvrGcVrgiHY0MC38QUQZzcvB3WYUDl/SwpsJbDVWx5cyvRXmirv4eD4Cw
+0kYSDsKlSFbTF2XHtjOWQCcodmKr6ZELtFlFN65xwVl+2P2aMl8Gmsbx/NlRP0s9
+ziK5dN873r5mTzNXMDcI654denYySvpmTjGyfdDeYkC1kg5BLVZSwvcM605dh8V6
+KViE95PGw+MSOkjMaS03DTH9qLLjuDeS30nPtw0+qZCpLHBYTgCGdpYt4y8p/3Jo
+JpYNifHt5xrIeQC+TPb8Q9RYGMzYWiVqEgRfbQ9/sylPMaCLWQqWH9rNQiimH3YF
+fzUiQ0VPQHnPrPYwagyQKcoI25XVC0ew/R0oJsiotMuGn7D0Yx1+YD2SoCwGOQL+
+6HlCNHuR/Yr48b4uYmue+0tNgP6mTwhQwmDRIBG3O4IDLBegkL1k2qoZcpvDGM6M
+xb2ByDf3tjp/IRasDO1ahH+H7H0iQcNzuuyNrBdBa6mF313KJ6AXEQ2A5EQzmlA3
+3HIALJy4NftdszNroOd06DhYf77NcRX3Ozvs+t2ug0EOWrRhUa98IUbJOBCepqbK
+SzvWqtnJHdyKDxzAODAijSZ+t2whc5KSFBUyKubjoOzzRsMztEzEzzZUPTJnom5d
+t8blEIeoG3Lxrzm6f6uW
+=8JjR
 -----END PGP SIGNATURE-----
