@@ -3,7 +3,6 @@
 <pkgmetadata>
 <herd>emacs</herd>
 <use>
-  <flag name='emacs22icons'>Install Emacs 22 style icons</flag>
   <flag name='games'>Support shared score files for games</flag>
 </use>
 </pkgmetadata>
